--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Und die Bedrohung fÃ&#x0133;r die Sicherheitstechnik</title>
 <meta name="originator" content="TeX4ht (https://tug.org/tex4ht/)"> 
 <!-- html --> 
 <meta name="src" content="index.tex"> 
-<link rel="stylesheet" type="text/css" href=style.css"> 
+<link rel="stylesheet" type="text/css" href=index.css"> 
 </head><body 
 >
    <div class="maketitle">
